Update index.html with a style tag, simple css

--- a/index.html
+++ b/index.html
@@ -4,34 +4,50 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Menu</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: auto;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    hr {
+      margin: 20px 0;
+    }
+  </style>
 </head>
 <body>
 
-  <h1>what I got</h1>
+  <h1>thatP90guy p90 parts and more</h1>
 
   <!-- Contact Info -->
-  <p>📞 Call to Order: <strong>+1 813-468-1104</strong></p>
-  <p>📧 Email: <strong>thatP90Guy@tutamail.com</strong></p>
+  <p>📞 Call to Order: <strong>555-123-4567</strong></p>
+  <p>📧 Email: <strong>thatP90guy@tutamail.com</strong></p>
   <hr />
 
   <!-- Menu Items -->
   <div>
     <h2>Burger — $8.99</h2>
-    <img src="burger.jpg" alt="Burger" style="max-width:100%;">
+    <img src="burger.jpg" alt="Burger">
     <p>A juicy burger with lettuce and tomato.</p>
   </div>
 
   <div>
     <h2>Fries — $3.50</h2>
-    <img src="fries.jpg" alt="Fries" style="max-width:100%;">
+    <img src="fries.jpg" alt="Fries">
     <p>Classic crispy fries.</p>
   </div>
 
   <div>
     <h2>Soda — $1.99</h2>
-    <img src="soda.jpg" alt="Soda" style="max-width:100%;">
+    <img src="soda.jpg" alt="Soda">
     <p>Choose from Coke, Sprite, or Root Beer.</p>
   </div>
 
 </body>
 </html>
+
